--- a/css/estilos.css
+++ b/css/estilos.css
@@ -380,7 +380,7 @@ h2 {
 
 /** Header **/
 header {
-  border-top: 5px solid #C24E4B;
+  border-top: 5px solid #c24e4b;
   background: rgba(30, 44, 53, 0.8);
   height: 90px;
   width: 100%;
@@ -429,7 +429,7 @@ header .container {
 
 .destaque button {
   margin-top: 1em;
-  background: #C24E4B;
+  background: #c24e4b;
   border: 0;
   padding: .6em;
   font-size: 1.2em;
@@ -485,7 +485,7 @@ header .container {
 
 /** Planos **/
 .planos {
-  background: #1E2C35; }
+  background: #1e2c35; }
 
 .planos h2 {
   color: #FFF; }
@@ -503,7 +503,7 @@ header .container {
 .plano h3 {
   color: #FFF;
   font-size: 1.8em;
-  background: #C24E4B;
+  background: #c24e4b;
   text-align: center;
   height: 2em;
   padding-top: .6em;
@@ -511,7 +511,7 @@ header .container {
 
 .plano div {
   text-align: center;
-  color: #C24E4B;
+  color: #c24e4b;
   font-size: 2.75em; }
 
 .itens-plano {
@@ -528,7 +528,7 @@ header .container {
     float: right; }
 
 .plano button {
-  background: #C24E4B;
+  background: #c24e4b;
   border: 0;
   color: #FFF;
   width: 210px;
@@ -611,7 +611,7 @@ textarea {
 
 .contato button {
   margin: 0 auto;
-  background: #C24E4B;
+  background: #c24e4b;
   border: 0;
   color: #FFF;
   width: 210px;
@@ -640,7 +640,7 @@ footer::after {
 
 footer::before {
   content: "";
-  background: #1E2C35;
+  background: #1e2c35;
   top: 0;
   left: 0;
   bottom: 0;
