--- a/css/estilos.css
+++ b/css/estilos.css
@@ -372,6 +372,9 @@ body {
 .container {
   width: 940px;
   margin: 0 auto; }
+  @media (max-width: 980px) {
+    .container {
+      width: 90%; } }
 
 .titulo-secao {
   text-decoration: underline;
@@ -394,9 +397,22 @@ header {
   height: 90px;
   width: 100%;
   position: absolute; }
+  @media mq-mobile {
+    header {
+      height: auto; }
+      header h1 {
+        max-width: 50%;
+        margin: 0, auto; }
+        header h1 img {
+          max-width: 100%;
+          margin: .5em auto;
+          display: block; } }
 
 header .container {
   position: relative; }
+  @media mq-mobile {
+    header .container {
+      position: static; } }
 
 .menu-principal {
   position: absolute;
@@ -404,11 +420,23 @@ header .container {
   top: -.5em;
   font-size: 1.2em;
   font-weight: lighter; }
+  @media mq-mobile {
+    .menu-principal {
+      position: static;
+      display: block;
+      text-align: center; }
+      .menu-principal form {
+        width: auto; } }
   .menu-principal ul {
     padding-left: 0; }
   .menu-principal li {
     display: inline-block;
     width: 5em; }
+    @media mq-mobile {
+      .menu-principal li {
+        margin: .4em; }
+        .menu-principal li form {
+          width: auto; } }
   .menu-principal a {
     color: white;
     text-decoration: none; }
@@ -423,6 +451,10 @@ header .container {
   color: white;
   height: 330px;
   padding-top: 10em; }
+  @media mq-mobile {
+    .destaque {
+      font-size: 14px;
+      height: 250px; } }
 
 .destaque p {
   width: 30em; }
@@ -575,6 +607,10 @@ header .container {
   width: 48%;
   display: inline-block;
   vertical-align: top; }
+  @media mq-mobile {
+    .post-destaque form,
+    .posts-antigos form {
+      width: auto; } }
 
 .post-destaque {
   margin-right: 2em; }
